--- a/travis.html
+++ b/travis.html
@@ -12,11 +12,12 @@
         <li>MY EYES</li>
         <li>I KNOW?</li>
         <li>MELTDOWN</li>
-        <a href="https://www.youtube.com/watch?v=LuKm4L9ryB0" target="_blank" rel="noopener noreferre">Link</a>
+        <a href="https://www.youtube.com/watch?v=LuKm4L9ryB0" target="_blank" rel="noopener noreferrer">Link</a>
         <ol>
             <li>ROnald</li>
             <li>Ronand</li>
         </ol>
     </ul>
+    <a href="about.html" target="_blank" rel="noopener noreferrer">ABOUT</a>
 </body>
 </html>
